--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --theme-bckgrnd-hero: #2f303a;
   --theme-btn: #2196f3;
   --theme-bckgrnd-team: #f5f4fa;
+  --theme-border-color: #eeeeee;
+  --theme-header-border: #ececec;
 }
 
 body {
@@ -38,6 +40,7 @@ ul {
   display: flex;
   align-items: center;
   height: 80px;
+  border-bottom: 1px solid var(--theme-header-border);
 }
 
 .logo-header {
@@ -167,7 +170,7 @@ ul {
 
 /* benefits */
 
-.benefits-section {
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -207,10 +210,6 @@ ul {
 
 /* employment */
 
-.employment-section {
-  padding-bottom: 94px;
-}
-
 .employment-list {
   display: flex;
 }
@@ -226,13 +225,11 @@ ul {
 /* team */
 
 .team-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--theme-bckgrnd-team);
 }
 
 .team-item {
-  widht: 270px;
+  width: 270px;
   margin-right: 30px;
   padding-bottom: 30px;
   background-color: var(--theme-light);
@@ -342,11 +339,6 @@ ul {
 
 /*  examples section */
 
-.examples-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .examples-section-list {
   display: flex;
   flex-wrap: wrap;
@@ -357,6 +349,7 @@ ul {
   margin-right: 30px;
   margin-bottom: 30px;
   padding-bottom: 20px;
+  border-bottom: 1px solid var(--theme-border-color);
 }
 
 .examples-section-items:nth-child(3n + 3) {
