--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,16 @@ ul {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 /* header */
+
+.header {
+  border-bottom: 1px solid var(--theme-header-border);
+}
+
 .header > .container {
   display: flex;
   align-items: center;
-  height: 80px;
-  border-bottom: 1px solid var(--theme-header-border);
 }
 
 .logo-header {
@@ -52,6 +56,8 @@ ul {
   letter-spacing: 0.03em;
   color: var(--theme-main);
   text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .logo-first-word {
@@ -93,6 +99,8 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .nav-link:visited {
@@ -118,6 +126,8 @@ ul {
   line-height: 1.14px;
   letter-spacing: 0.02em;
   color: var(--theme-description);
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .contacts-link:visited {
@@ -127,10 +137,8 @@ ul {
 /* hero-section */
 
 .hero {
-  width: 1600px;
-  margin-left: -200px;
   padding-top: 200px;
-  padding-bottom: 200px;
+  padding-bottom: 280px;
   background-color: var(--theme-bckgrnd-hero);
 }
 
@@ -148,6 +156,7 @@ ul {
 .hero-btn {
   margin-left: auto;
   margin-right: auto;
+  padding: 10px 32px 10px 32px;
   color: var(--theme-light);
   background-color: var(--theme-accent);
   font-family: inherit;
@@ -210,6 +219,10 @@ ul {
 
 /* employment */
 
+.employment-section {
+  padding-bottom: 94px;
+}
+
 .employment-list {
   display: flex;
 }
@@ -222,6 +235,12 @@ ul {
   margin-right: 0;
 }
 
+.employment-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* team */
 
 .team-section {
@@ -231,16 +250,16 @@ ul {
 .team-item {
   width: 270px;
   margin-right: 30px;
-  padding-bottom: 30px;
   background-color: var(--theme-light);
+}
+
+.team-item-description {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-item:last-child {
   margin-right: 0;
-}
-
-.team-item-photo {
-  margin-bottom: 30px;
 }
 
 .employment-title,
@@ -280,19 +299,15 @@ ul {
 /* footer */
 
 .footer {
-  width: 1600px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--theme-bckgrnd-hero);
 }
 
-.footer > .container {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
-  flex-direction: column;
-}
 .logo-footer {
+  display: inline-block;
   margin-bottom: 20px;
   font-family: Raleway;
   font-weight: 700;
@@ -346,18 +361,17 @@ ul {
 
 .examples-section-items {
   width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  padding-bottom: 20px;
+  margin-left: 30px;
+  margin-top: 30px;
   border-bottom: 1px solid var(--theme-border-color);
 }
 
-.examples-section-items:nth-child(3n + 3) {
-  margin-right: 30px;
+.examples-section-items:nth-child(3n + 1) {
+  margin-left: 0;
 }
 
-.examples-section-items:nth-last-child(-n + 3) {
-  margin-bottom: 30px;
+.examples-section-items:nth-last-child(n + 7) {
+  margin-top: 0;
 }
 
 /*  portfolio filter  */
@@ -377,6 +391,7 @@ ul {
 }
 
 .portfolio-filter-button {
+  padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -397,8 +412,8 @@ ul {
 
 /* portfolio */
 
-.company-photo {
-  margin-bottom: 20px;
+.company-text {
+  padding: 20px 24px;
 }
 
 .company-name {
@@ -425,6 +440,8 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .current-btn {
