--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ h3 {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 button {
   border: none;
@@ -44,8 +45,22 @@ a {
 address {
   font-style: normal;
 }
+
+img {
+  display: block;
+}
+
 * {
   margin: 0;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+}
+
+.section {
+  padding: 120px 0;
 }
 
 .logo {
@@ -59,6 +74,27 @@ address {
 }
 .logo-accent {
   color: var(--dark-color);
+}
+
+.header {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 0;
+}
+
+.header-nav {
+  display: flex;
+  gap: 76px;
+}
+
+.header-list {
+  display: flex;
+  gap: 40px;
 }
 
 .header-nav-link {
@@ -78,6 +114,14 @@ address {
 
 .hero {
   background-color: var(--hero-bg-color);
+  padding: 188px 0;
+}
+
+.hero > .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
 }
 .hero-title {
   text-align: center;
@@ -93,10 +137,16 @@ address {
   background-color: var(--primary-color);
   letter-spacing: 0.04em;
   font-weight: 500;
+  padding: 16px 32px;
 }
 .hero-cta:hover,
 .hero-cta:focus {
   background-color: var(--pressed-color);
+}
+
+.list {
+  display: flex;
+  gap: 24px;
 }
 
 .section-title {
@@ -115,6 +165,11 @@ address {
   }
 }
 
+.team-description {
+  padding: 32px 16px;
+  text-align: center;
+}
+
 .card {
   background-color: var(--white-color);
 }
@@ -126,10 +181,21 @@ address {
   letter-spacing: 0.02em;
 }
 
+.portfolio .list {
+  flex-wrap: wrap;
+  row-gap: 48px;
+}
+.portfolio-description {
+  padding: 32px 16px;
+  border: 1px solid var(--accent-color);
+  border-top: none;
+}
 .footer {
   background-color: var(--hero-bg-color);
+  padding: 100px 0;
 }
 .footer-logo {
+  display: block;
   margin-bottom: 16px;
 }
 .footer-logo-accent {
