--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ img {
 .container {
   width: 1158px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 .section {
@@ -71,6 +72,7 @@ img {
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  margin-right: 76px;
 }
 .logo-accent {
   color: var(--dark-color);
@@ -89,7 +91,7 @@ img {
 
 .header-nav {
   display: flex;
-  gap: 76px;
+  align-items: center;
 }
 
 .header-list {
@@ -100,6 +102,7 @@ img {
 .header-nav-link {
   color: var(--dark-color);
   font-weight: 500;
+  padding: 24px 0;
 }
 
 .header-nav-link:hover,
@@ -129,7 +132,7 @@ img {
   line-height: 1.07;
   color: var(--white-color);
   font-weight: 700;
-  max-width: 500px;
+  max-width: 496px;
   letter-spacing: 0.02em;
 }
 .hero-cta {
@@ -138,6 +141,8 @@ img {
   letter-spacing: 0.04em;
   font-weight: 500;
   padding: 16px 32px;
+  min-width: 169px;
+  border-radius: 4px;
 }
 .hero-cta:hover,
 .hero-cta:focus {
@@ -162,6 +167,7 @@ img {
   background-color: var(--light-color);
   .card {
     background-color: var(--white-color);
+    border-radius: 0 0 4px 4px;
   }
 }
 
@@ -172,6 +178,7 @@ img {
 
 .card {
   background-color: var(--white-color);
+  width: calc((100% - 72px) / 4);
 }
 .card-title {
   margin-bottom: 8px;
@@ -181,12 +188,16 @@ img {
   letter-spacing: 0.02em;
 }
 
+.portfolio .card {
+  width: calc((100% - 48px) / 3);
+}
+
 .portfolio .list {
   flex-wrap: wrap;
   row-gap: 48px;
 }
 .portfolio-description {
-  padding: 32px 16px;
+  padding: 32px 0;
   border: 1px solid var(--accent-color);
   border-top: none;
 }
@@ -195,7 +206,7 @@ img {
   padding: 100px 0;
 }
 .footer-logo {
-  display: block;
+  display: inline-block;
   margin-bottom: 16px;
 }
 .footer-logo-accent {
@@ -203,4 +214,15 @@ img {
 }
 .footer-text {
   color: var(--light-color);
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
