--- a/css/styles.css
+++ b/css/styles.css
@@ -165,10 +165,10 @@ img {
 }
 .team {
   background-color: var(--light-color);
-  .card {
-    background-color: var(--white-color);
-    border-radius: 0 0 4px 4px;
-  }
+}
+.team .card {
+  background-color: var(--white-color);
+  border-radius: 0 0 4px 4px;
 }
 
 .team-description {
@@ -219,10 +219,11 @@ img {
   position: absolute;
   width: 1px;
   height: 1px;
-  padding: 0;
   margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
+  border: 0;
+  padding: 0;
   white-space: nowrap;
-  border-width: 0;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
